# weboldnewphoto

./: CMakeLists.txt  FindFreeImage.cmake  autolevelfilter.cpp  channelcombiner.cpp  largepixeldata.cpp  main.cpp  newoldphoto.css  opencvimage.cpp  weboldnewphoto.cpp  wgenericvirtualimage.cpp  whelpers.cpp  wt_config.xml
include/: autolevelfilter.h  channelcombiner.h  imagefilter.h  itypes.h  largepixeldata.h  nullptr.h  opencvimage.h  weboldnewphoto.h  wgenericvirtualimage.h  whelpers.h
webroot/: weboldnewphoto.css
webroot/resources/: form.css  moz-transitions.css  transitions.css  webkit-transitions.css
webroot/resources/jPlayer/: jquery.jplayer.min.js  jquery.min.js
webroot/resources/themes/default/: wt.css  wt_ie.css  wt_ie6.css
webroot/resources/themes/default/no-stripes/: generate.sh
webroot/resources/themes/default/stripes/: generate.sh
webroot/resources/themes/polished/: wt.css  wt_ie.css  wt_ie6.css
webroot/resources/themes/polished/stripes/: generate.sh
